--- a/aws_sample.yaml
+++ b/aws_sample.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
  name: "Check that all resources are tagged with the key - env"
- id: "CKV2_AWS_1"
+ id: "QUANGTEST_AWS_1"
  category: "GENERAL_SECURITY"
 definition:
        cond_type: "attribute"
