--- a/aws_sample.yaml
+++ b/aws_sample.yaml
@@ -1,9 +1,9 @@
 metadata:
- name: "Check that all resources are tagged with the key - env"
- id: "QUANGTEST_AWS_1"
- category: "GENERAL_SECURITY"
+   name: "Check that all resources are tagged with the key - env"
+   id: "QUANGTEST_AWS_1"
+   category: "GENERAL_SECURITY"
 definition:
- cond_type: "attribute"
- resource_types: "all"
- attribute: "tags.env"
- operator: "exists"
+   cond_type: "attribute"
+   - resource_types: "all"
+   attribute: "tags.env"
+   operator: "exists"
