--- a/aws_sample.yaml
+++ b/aws_sample.yaml
@@ -4,6 +4,7 @@ metadata:
    category: "GENERAL_SECURITY"
 definition:
    cond_type: "attribute"
-   - resource_types: "all"
+   resource_types:
+      - aws_s3_bucket
    attribute: "tags.env"
    operator: "exists"
