--- a/aws_sample.yaml
+++ b/aws_sample.yaml
@@ -5,6 +5,6 @@ metadata:
 definition:
    cond_type: "attribute"
    resource_types:
-      - aws_s3_bucket
+      - all
    attribute: "tags.env"
    operator: "exists"
